# qsnippets

./: further_todos.md  main.py  pyproject.toml
02_long_time_algo_examples/: a_swap_test.ipynb  b_hadamard_test.ipynb  c_hhl_algorithm.ipynb  z_test.ipynb
